fix: interviewer fields order in csv